Fix mobile horizontal overflow and force cache bust

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ a:hover {
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow: hidden;
 }
 
 .background-image {
